<resources>

    <!-- General -->
    <string name="app_name" translatable="false">Anagenda</string>
    <string name="company_website" translatable="false">http://unischemat.wordpress.com</string>

    <!-- Preferences -->

        <!-- General -->
        <string name="pref_general_header">General</string>
        <string name="pref_general_offline">Offline-mode</string>
        <string name="pref_general_offline_off">OFF</string>
        <string name="pref_general_offline_on">ON</string>

        <!-- Update -->
        <string name="pref_update_header">Update</string>
        <string name="pref_update_interval_header">Automatic update</string>
        <string name="pref_update_interval_dialog">Interval</string>

        <!-- Misc -->
        <string name="pref_misc_header">Miscellaneous</string>
        <string name="pref_misc_website">Website</string>

        <!-- Special Mentions -->
        <string name="pref_special_header">Special Mentions</string>
        <string name="pref_special_jsoup" translatable="false">Jonathan Headley</string>
        <string name="pref_special_jsoup_link" translatable="false">http://jhy.io/</string>
        <string name="pref_special_prabeesh" translatable="false">PRABEESH S K</string>
        <string name="pref_special_prabeesh_link" translatable="false">https://www.youtube.com/user/TICOONTECHNOLOGIES</string>
    
    <!-- ActionBar -->
    <string name="action_title_myschedules">My Schedules</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <!-- Development helpers -->
    <string name="default_schedule1" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=today&amp;intervallTyp=d&amp;intervallAntal=1&amp;sprak=EN&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=l.HSL3
    </string>
    <string name="default_schedule2" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=today&amp;intervallTyp=d&amp;intervallAntal=1&amp;sprak=EN&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=s.jad
    </string>
    <string name="default_schedule3" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=idag&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=SV&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=k.IK100G-26073V16-
    </string>
    <string name="default_schedule4" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=idag&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=SV&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=l.P245
    </string>
    <string name="default_schedule6" formatted="false" translatable="false">http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=idag&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=SV&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=p.Dataingenj%C3%B6rsprogrammet+%C3%A5k+1
    </string>
    <string name="default_schedule5" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?intervallTyp=m&amp;sprak=SV&amp;forklaringar=true&amp;sokMedAND=true&amp;intervallAntal=6&amp;startDatum=idag&amp;resurser=s.jpn
    </string>
    <string name="default_schedule7" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=today&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=EN&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=k.IK2012-26071V16-
    </string>
    <string name="default_schedule8" translatable="false">
        http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=today&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=EN&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=k.IK100G-26073V16-
    </string>


    <!-- Default strings -->
    
        <!-- Search String -->
        <string name="default_search_string" translatable="false">http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=idag&amp;intervallTyp=m&amp;intervallAntal=6&amp;sokMedAND=true&amp;forklaringar=true&amp;sprak=</string>
        <string name="default_search_string_language">EN&amp;</string>
        <string name="default_search_string2" translatable="false">&amp;resurser=</string>
        <string name="default_search_string_course" translatable="false">k.</string>
        <string name="default_search_string_programme" translatable="false">p.</string>
        <string name="default_search_string_room" translatable="false">l.</string>
        <string name="default_search_string_signature" translatable="false">s.</string>

        <!-- Schedule-view -->
        <string name="schedule_title">Schedule</string>
        <string name="schedule_group">Group: </string>
        <string name="schedule_signatur">Signature: </string>
        <string name="schedule_likatecken">Date: - | | -</string>

        <!-- Saved schedules -->
        <string name="saved_schedules_description">Description</string>
        <string name="saved_schedules_next_event">Next event:</string>
        <string name="saved_schedules_coursecode">Code</string>
        <string name="saved_schedules_icon_description">Icon</string>

    <!-- Search Schedule -->
    <string name="search_info">How to use the search function:
    \n \n Choose the type of schedule you would like to look up from the drop down menu. The different types are: \n Course \n Programme \n Signature \n Locale \n \n Type in the exact name of the Course code, Programme name, Signature, or Locale, in the search field and hit the Search button. \n </string>
    <string name="search_text">Search:</string>

    <!-- Toasts -->
    <string name="toast_saved_schedule">Saved</string>
    <string name ="toast_delete_schedule">Deleted</string>

    <!-- Content describers -->
    <string name="saved_schedules_icon_course" translatable="false">Course-icon</string>
    <string name="saved_schedules_icon_locale" translatable="false">Locale-icon</string>
    <string name="saved_schedules_icon_programme" translatable="false">Programme-icon</string>
    <string name="saved_schedules_icon_person" translatable="false">Person-icon</string>
    <string name="spinner_title" translatable="false">Spinner-title</string>

    <!-- Default search string -->
    <string name="search_string">http://schema.oru.se/setup/jsp/Schema.jsp?startDatum=idag&amp;intervallTyp=m&amp;intervallAntal=6&amp;sprak=SV&amp;sokMedAND=true&amp;forklaringar=true&amp;resurser=</string>

</resources>