<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/saved_schedules_row_layout"
    >

    <!-- Icon -->
    <ImageView
        android:id="@+id/saved_schedules_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        />

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/saved_schedules_icon"
        android:layout_marginStart="5dp"
        android:id="@+id/saved_schedules_coursename"
        android:text="@string/saved_schedules_description"
        android:textSize="19sp"
        android:textColor="@color/colorTextPrimary"
        />

    <!-- Next event -->
    <TextView
        android:id="@+id/saved_schedules_next_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saved_schedules_coursename"
        android:layout_toEndOf="@+id/saved_schedules_icon"
        android:layout_marginStart="5dp"
        android:text="@string/saved_schedules_next_event"
        android:textColor="@color/colorTextSecondary"
        android:textSize="13sp"
        />

    <!-- Course code -->
    <TextView
        android:id="@+id/saved_schedules_coursecode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/saved_schedules_next_event"
        android:layout_toEndOf="@+id/saved_schedules_icon"
        android:layout_marginStart="5dp"
        android:text="@string/saved_schedules_coursecode"
        android:textColor="@color/colorTextSecondary"
        android:textSize="13sp"
        />

</RelativeLayout>